[package]
name = "terra-disperse"
description = "Helper library for interacting with Cosmos assets (SDK coins and CW20 tokens)"
version = "1.0.0"
authors = ["tansawit <sawit@neb.money>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/mars-protocol/cw-asset"

[dependencies]
cosmwasm-std = "1.0"
cw2 = { version = "0.13.4" }
cw20 = "0.13"
thiserror = { version = "1.0.30" }
schemars = "0.8.1"\
serde = { version = "1.0.103", default-features = false, features = ["derive"] }